Cleanup to get this building again.
- Remove fanciful library it has been abandoned in favor of Spigot Chat
Api
- Update World Edit version and point at my person repo since the most
up to date copy isn't in the world edit repo
- Remove some nullable annotation that wouldn't compile in OpenJDK.
- Add myself to the readme.
- Update Spigot dependency to 1.12.2

--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 
   <!-- Project properties -->
 
-  <groupId>me.botsko</groupId>
+  <groupId>io.github.wispoffates</groupId>
   <artifactId>prism</artifactId>
-  <version>1.12-2.0.12</version>
+  <version>1.12-2.0.13</version>
 
   <name>Prism</name>
   <description>
@@ -83,11 +83,17 @@
       <email>syokkendesuyo@gmail.com</email>
       <url>https://github.com/syokkendesuyo</url>
     </developer>
-    <!-- Current maintainer of GPrism fork -->
+    <!-- previous maintainer of GPrism fork -->
     <developer>
       <name>Roy Curtis</name>
       <email>roy.adrian.curtis+github@gmail.com</email>
       <url>https://github.com/RoyCurtis</url>
+    </developer>
+    <!-- Continued Development -->
+    <developer>
+      <name>Troy Smith</name>
+      <email>fayted+github@gmail.com</email>
+      <url>https://github.com/wispoffates</url>
     </developer>
   </developers>
 
@@ -104,10 +110,11 @@
       <id>sk89q-repo</id>
       <url>http://maven.sk89q.com/repo/</url>
     </repository>
-    <!-- For Fanciful dependency -->
+    <!-- wispoffates 3rd party repo -->
+    <!-- This is for storing dependencies that don't have their own maver or do not have them up to date -->
     <repository>
-      <id>fanciful-mvn-repo</id>
-      <url>http://repo.stealthyone.com/content/groups/public/</url>
+      <id>troytech-3rdparty-mvn-repo</id>
+      <url>http://troytech.info:8081/repository/3rd_Party/</url>
     </repository>
   </repositories>
 
@@ -116,14 +123,14 @@
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
-      <version>1.12-R0.1-SNAPSHOT</version>
+      <version>1.12.2-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
-      <groupId>com.sk89q</groupId>
-      <artifactId>worldedit</artifactId>
-      <version>6.0.0-SNAPSHOT</version>
+      <groupId>com.sk89q.worldedit</groupId>
+      <artifactId>worldedit-bukkit</artifactId>
+      <version>6.1.7.3</version>
       <scope>provided</scope>
     </dependency>
 
@@ -133,13 +140,7 @@
       <version>7.0.52</version>
       <scope>compile</scope>
     </dependency>
-
-    <dependency>
-      <groupId>mkremins</groupId>
-      <artifactId>fanciful</artifactId>
-      <version>0.3.3-SNAPSHOT</version>
-      <scope>compile</scope>
-    </dependency>
+    
   </dependencies>
 
   <!-- Project settings -->
@@ -209,7 +210,6 @@
             <includes>
               <include>org.apache.tomcat:tomcat-jdbc</include>
               <include>org.apache.tomcat:tomcat-juli</include>
-              <include>mkremins:fanciful</include>
             </includes>
           </artifactSet>
 
@@ -226,12 +226,7 @@
               <pattern>org.apache.juli</pattern>
               <shadedPattern>com.helion3.prism.libs.org.apache.juli</shadedPattern>
             </relocation>
-
-            <!-- Fanciful dependency -->
-            <relocation>
-              <pattern>mkremins.fanciful</pattern>
-              <shadedPattern>com.helion3.prism.libs.mkremins.fanciful</shadedPattern>
-            </relocation>
+            
           </relocations>
         </configuration>
 
